--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/WhatsApp Image 2024-08-02 at 11.36.22_d2328a7d.jpg"/>
+  <link rel="icon" type="image/svg+xml" href="/EX TECHNOLOGY LOGO.-02.jpg"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Extechnology</title>
 
