--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/EX TECHNOLOGY LOGO.-02.jpg"/>
+  <link rel="icon" type="image/svg+xml" href="/EX_TECHNOLOGY_LOGO.-02-removebg-preview.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Extechnology</title>
+  <title>EX-TECHNOLOGY</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
