--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/EX_TECHNOLOGY_LOGO.-02-removebg-preview.png"/>
+  <link rel="icon" type="image/svg+xml" href="/EX-LOGO.-01-01-removebg-preview.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EX-TECHNOLOGY</title>
 
